testsuite/tests/properties/invalid_cast/test.out
== correct/test.lkt ==
Code generation was successful

== cross_node/test.lkt ==
test.lkt:7:64: error: BarNode parent type or subtype expected
7 |     @exported fun prop(): ListNode = node.bar_node_parent().as[ListNode]
  |                                                                ^^^^^^^^


== not_node/test.lkt ==
test.lkt:6:48: error: Bare node type expected
6 |     @exported fun prop(): Int = node.parent.as[Int]
  |                                                ^^^


== null_cond/test.lkt ==
test.lkt:6:48: error: The null-conditional operator is not allowed on .as
6 |     @exported fun prop(): BarNode = node.parent?.as[BarNode]
  |                                                ^


lkt_compile: Done
